Correction du bug lié à l'upload des fichiers images

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -93,7 +93,7 @@
                   <li><a href="blog-details.html">Blog Single</a></li>
                 </ul>
               </li>
-              <li class="dashboard"><a href="http://wp.alithemes.com/html/jobbox/demos/dashboard" target="_blank">Dashboard</a></li>
+              <li class="dashboard"><a routerLink="profile">Admin</a></li>
             </ul>
           </nav>
           <div class="burger-icon burger-icon-white"><span class="burger-icon-top"></span><span class="burger-icon-mid"></span><span class="burger-icon-bottom"></span></div>
@@ -264,3 +264,5 @@
       </div>
     </div>
   </div>
+
+  
