--- a/src/app/components/amateur/amateur.component.html
+++ b/src/app/components/amateur/amateur.component.html
@@ -1,90 +1,81 @@
 <div class="tab-pane fade show active" id="tab-my-profile" role="tabpanel" aria-labelledby="tab-my-profile">
-    <h3 class="mt-0 mb-15 color-brand-1">Pour les Pros & Amateurs de la musique</h3>
-        <div class="row form-contact">
-            <form [formGroup]="profileForm">
+    <h3 class="mt-0 mb-15 color-brand-1">Grand Public</h3>
+    <div class="row form-contact">
+        <form [formGroup]="profileForm" (ngSubmit)="save()">
             <div class="col-lg-6 col-md-12">
                 <div class="border-bottom pt-10 pb-10 mb-30"></div>
                 <h6 class="color-orange mb-20">Informations Personnelles</h6>
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label class="font-sm color-text-mutted mb-10">Nom *</label>
-                            <input class="form-control" type="text" placeholder="Entrer votre nom"
-                              formControlName="nom">
+                            <input class="form-control" type="text" placeholder="Entrer votre nom" formControlName="nom"
+                                [(ngModel)]="user.nom">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label class="font-sm color-text-mutted mb-10">Prenoms *</label>
                             <input class="form-control" type="text" placeholder="Entrer vos prenoms"
-                               formControlName="prenoms">
+                                formControlName="prenoms" [(ngModel)]="user.prenoms">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label class="font-sm color-text-mutted mb-10">Email </label>
-                            <input class="form-control" type="text" placeholder="stevenjob@gmail.com"
-                               formControlName="email">
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="font-sm color-text-mutted mb-10">Contact *</label>
                             <input class="form-control" type="text" placeholder="(+225) 0101010101"
-                                formControlName="contact">
+                                formControlName="contact" [(ngModel)]="user.contact">
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label class="font-sm color-text-mutted mb-10">Pays</label>
-                            <select class="form-control form-select-sm" aria-label=".form-select-sm example" formControlName="pays">
+                            <select class="form-control form-select-sm" aria-label=".form-select-sm example"
+                                formControlName="pays" [(ngModel)]="user.pays" aria-placeholder="Pays">
+                                <option selected value="" disabled>Votre Pays</option>
                                 <option *ngFor="let item of country" value="{{item.name}}">{{item.name}}</option>
                             </select>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="font-sm color-text-mutted mb-10">Ville</label>
-                            <input class="form-control" type="text" placeholder="New York" formControlName="ville">
-                        </div>
+                     
+                    </div>
+                    <div class="col-lg-6">
                     </div>
                 </div>
-                <div class="border-bottom pt-10 pb-10 mb-30"></div>
+                <div class="border-bottom pt-1 pb-1 mb-3"></div>
                 <h6 class="color-orange mb-20">Identifiants</h6>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="form-group">
-                            <label class="font-sm color-text-mutted mb-10">Nom
-                                d'utilisateur *</label>
-                            <input class="form-control" type="text" placeholder="Entrer votre nom d'utilisateur" formControlName="username">
-                    </div>
+                            <input class="form-control" type="text" placeholder="Email"
+                                formControlName="email" [(ngModel)]="user.email">
+                        </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="form-group">
                             <label class="font-sm color-text-mutted mb-10">Mot de Passe *</label>
-                            <input class="form-control" type="password" placeholder="*********" formControlName="password">
+                            <input class="form-control" type="password" placeholder="*********"
+                                formControlName="password" [(ngModel)]="user.password">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="form-group">
                             <label class="font-sm color-text-mutted mb-10">Confirmer Mot de
                                 Passe *</label>
-                            <input class="form-control" type="password" placeholder="********" formControlName="confirm">
+                            <input class="form-control" type="password" placeholder="********"
+                                formControlName="confirm">
                         </div>
                     </div>
                 </div>
                 <div class="box-button mt-15">
-                    <!-- <button  class="btn btn-apply-big font-md font-bold" type="button" disabled>
-                        <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-                        <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                    <button *ngIf="isSubmitted" class="btn btn-apply-big font-md font-bold" type="button"
+                        [disabled]="isSubmitted">
                         <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
                         Patientez...
-                      </button> -->
-                    <button [disabled]="!profileForm.valid" type="submit" class="btn btn-apply-big font-md font-bold">S'inscrire</button>
+                    </button>
+                    <button *ngIf="!isSubmitted" [disabled]="!profileForm.valid" type="submit"
+                        class="btn btn-apply-big font-md font-bold">S'inscrire</button>
                 </div>
             </div>
         </form>
-        </div>
+    </div>
 </div>
