--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<main class="main">
+    <section class="pt-100 login-register">
+        <div class="container">
+            <div class="row login-register-cover">
+                <div class="col-lg-4 col-md-6 col-sm-12 mx-auto">
+                    <div class="text-center">
+                        <p class="font-sm text-brand-2">Content de te revoir! </p>
+                        <h2 class="mt-10 mb-5 text-brand-1">Espace Membre</h2>
+                    </div>
+                    <form class="login-register text-start mt-20" [formGroup]="loginForm" (ngSubmit)="login()">
+                        <div class="form-group">
+                            <label class="form-label" for="input-1">Nom d'utilisateur *</label>
+                            <input class="form-control" id="input-1" type="text" formControlName="username" [(ngModel)]="user.username">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label" for="input-4">Mot de passe*</label>
+                            <input class="form-control" id="input-4" type="password" formControlName="password" [(ngModel)]="user.password">
+                        </div>
+                        <div class="login_footer form-group d-flex justify-content-between">
+                            <label class="cb-container">
+                            </label><a class="text-muted" href="page-contact.html">Mot de passe oublié</a>
+                        </div>
+                        <p class="text text-danger">{{logErrorMessage}}</p>
+                        <div class="form-group">
+                            <button class="btn btn-brand-1 hover-up w-100" type="submit">Se
+                                connecter</button>
+                        </div>
+                        <div class="text-muted text-center">Vous n'avez pas de compte ?<a routerLink="/register">
+                                Inscription</a></div>
+                    </form>
+                </div>
+                <div class="img-1 d-none d-lg-block"><img class="shape-1"
+                        src="assets/imgs/page/login-register/img-4.svg" alt="JobBox"></div>
+                <div class="img-2"><img src="assets/imgs/page/login-register/img-3.svg" alt="JobBox"></div>
+            </div>
+        </div>
+    </section>
+</main>
