--- a/src/app/shared/components/materiel/materiel.component.html
+++ b/src/app/shared/components/materiel/materiel.component.html
@@ -1,51 +1,88 @@
-<div class="row location_vente_instrument" >
-    <div class="col-lg-6">
-        <h4>Details Matériel (s)</h4>
-        <div class="row mt-10">
-            <div class="col-lg-10">
-                <div class="form-group mb-30">
-                    <label class="font-sm color-text-mutted mb-10">Type
-                        *</label>
-                    <select class="form-control tools" multiple>
-                        
-                    </select>
+<div class="row location_vente_instrument">
+    <form [formGroup]="form" (submit)="saveData()">
+        <div class="col-lg-10">
+            <h4>Details Matériel (s)</h4>
+            <div class="row mt-10">
+                <div class="col-lg-9">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Titre
+                            *</label>
+                            <input type="text" class="form-control" formControlName="titre">
+                    </div>
                 </div>
+                <div class="col-lg-6">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Instrument (s)
+                            *</label>
+                        <select class="form-control tools" multiple>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Prix
+                            *</label>
+                        <input type="text" class="form-control" formControlName="prix">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Type
+                            *</label>
+                        <select class="form-control" formControlName="type">
+                            <option value="Location">Location</option>
+                            <option value="Vente">Vente</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Description
+                            *</label>
+                        <input type="text" class="form-control" formControlName="description">
+                    </div>
+                </div>
+
             </div>
         </div>
-    </div>
-    <div class="col-lg-10">
-        <div class="form-group mb-30">
-            <label class="font-sm color-text-mutted mb-10">Description *</label>
-            <textarea rows="5" class="form-control"
-                placeholder="Ajoutez une description..."></textarea>
-        </div>
-    </div>
-    <div class="col-lg-10 col-md-12">
-        <label class="font-sm color-text-mutted mb-10">Photos *</label>
-        <div class="form-group mb-30">
-            <div class="box-upload row">
-                <div class="col-md-2">
-                    <div class="add-file-upload">
-                        <input class="fileupload" type="file" name="file" multiple
-                            (change)="previewImages($event)">
-                    </div>
+        <div class="col-lg-10 col-md-12">
+            <label class="font-sm color-text-mutted mb-10">Photos *</label>
+            <div class="form-group mb-30">
+                <div class="box-upload row">
+                    <div class="col-md-2">
+                        <div class="add-file-upload">
+                            <input class="fileupload" type="file" name="file" multiple (change)="previewImages($event)">
+                        </div>
 
-                </div>
-                <div class="col-md-10">
-                    <div class="row">
-                        <div class="col-md-4"
-                            *ngFor="let image of imageSources; index as i">
-                            <div class="output">
-                                <div class="image">
-                                    <img [src]="image" alt="image">
-                                    <span (click)="deleteImage(i)"></span>
+                    </div>
+                    <div class="col-md-10">
+                        <div class="row">
+                            <div class="col-md-4" *ngFor="let image of imageSources; index as i">
+                                <div class="output">
+                                    <div class="image">
+                                        <img [src]="image" alt="image">
+                                        <span (click)="deleteImage(i)"></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="form-group mt-10">
+                    <button *ngIf="isPosted" class="btn btn-default btn-brand icon-tick" type="button"
+                        [disabled]="isPosted">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Patientez...
+                    </button>
+                    <button *ngIf="!isPosted" class="btn btn-default btn-brand icon-tick"
+                        [disabled]="!form.valid || !selectedTools.length || !images.length ">Publier</button>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
