--- a/src/app/shared/components/salle/salle.component.html
+++ b/src/app/shared/components/salle/salle.component.html
@@ -1,96 +1,145 @@
 <div class="row">
-    <form [formGroup]="form" (submit)="saveData()">
-        <div class="col-lg-8 col-md-8">
-            <h4>Carateristiques de la salle</h4>
-            <div class="row mt-20">
-                <div class="col-lg-4">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Nombre de Place..." formControlName="nbPlace"/>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Scene..." formControlName="scene"/>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group mb-30">
-
-                        <input class="form-control" type="text" placeholder="Sonorisation" formControlName="sono"/>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Loges" formControlName="loge"/>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Plateau" formControlName="plateau"/>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Video" formControlName="video"/>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Source de Son" formControlName="sourceSon"/>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Projection" formControlName="projection"/>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Mobilier" formControlName="mobilier"/>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-group mb-30">
-                        <input class="form-control" type="text" placeholder="Acces a la Salle" formControlName="accesSalle"/>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-8 col-md-8">
-            <div class="form-group mb-30">
-                <textarea class="font-sm color-text-paragraph-2" placeholder="Divers ..." formControlName="divers"></textarea>
-            </div>
-        </div>
-        <div class="col-lg-10 col-md-12">
-            <label class="font-sm color-text-mutted mb-10">Photos *</label>
-            <div class="form-group mb-30">
-                <div class="box-upload row">
-                    <div class="col-md-2">
-                        <div class="add-file-upload">
-                            <input class="fileupload" type="file" name="file" multiple (change)="previewImages($event)">
+    <div class="col-lg-9">
+        <form [formGroup]="form" (submit)="saveData()">
+            <div class="col-lg-9 col-md-9">
+                <h4>Carateristiques de la salle</h4>
+                <div class="row mt-20">
+                    <div class="col-lg-12">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Titre..." formControlName="titre" />
                         </div>
                     </div>
-                    <div class="col-md-10">
-                        <div class="row">
-                            <div class="col-md-4" *ngFor="let image of imageSources; index as i">
-                                <div class="output">
-                                    <div class="image">
-                                        <img [src]="image" alt="image">
-                                        <span (click)="deleteImage(i)"></span>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Nombre de Place..."
+                                formControlName="nbPlace" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Scene..." formControlName="scene" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+
+                            <input class="form-control" type="text" placeholder="Sonorisation" formControlName="sono" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Loges" formControlName="loge" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Plateau" formControlName="plateau" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Video" formControlName="video" />
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Source de Son"
+                                formControlName="sourceSon" />
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Projection"
+                                formControlName="projection" />
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Mobilier" formControlName="mobilier" />
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Acces a la Salle"
+                                formControlName="accesSalle" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <form [formGroup]="diversForm">
+                <div class="row">
+                    <div class="col-lg-8 col-md-8">
+                        <div class="form-group mb-30">
+                            <input class="form-control font-sm color-text-paragraph-2" placeholder="Divers ..."
+                                formControlName="autre">
+                        </div>
+                    </div>
+                    <div class="col-lg-1 col-md-1">
+                        <div class="form-group mb-30">
+                            <button class="btn btn-primary" (click)="addDiver()"
+                                [disabled]="!diversForm.valid">+</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <div class="col-lg-10 col-md-12">
+                <label class="font-sm color-text-mutted mb-10">Photos *</label>
+                <div class="form-group mb-30">
+                    <div class="box-upload row">
+                        <div class="col-md-2">
+                            <div class="add-file-upload">
+                                <input class="fileupload" type="file" name="file" multiple
+                                    (change)="previewImages($event)">
+                            </div>
+                        </div>
+                        <div class="col-md-10">
+                            <div class="row">
+                                <div class="col-md-4" *ngFor="let image of imageSources; index as i">
+                                    <div class="output">
+                                        <div class="image">
+                                            <img [src]="image" alt="image">
+                                            <span (click)="deleteImage(i)"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="form-group mt-10">
-                        <button class="btn btn-default btn-brand icon-tick" type="submit" [disabled]="!form.valid">Publier</button>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="form-group mt-10">
+                            <button *ngIf="isPosted" class="btn btn-default btn-brand icon-tick" type="button"
+                                [disabled]="isPosted">
+                                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                Patientez...
+                            </button>
+                            <button *ngIf="!isPosted" class="btn btn-default btn-brand icon-tick"
+                                [disabled]="!form.valid">Publier</button>
+                        </div>
                     </div>
                 </div>
             </div>
+        </form>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-3" *ngIf="divers && divers.length > 0 ">
+        <div class="sidebar-border">
+            <div class="sidebar-heading">
+                <div class="avatar-sidebar">
+                    <div class="sidebar-info pl-0"><span class="sidebar-company">Divers</span>
+                    </div>
+                </div>
+            </div>
+            <div class="sidebar-list-job">
+                <ul>
+                    <li *ngFor="let item of divers; let i = index">
+                        <div class="sidebar-text-info">
+                            <strong class="small-heading">{{item}} <span class="text text-danger ml-10"
+                                    (click)="deleteDiver(item)" style="cursor:pointer">X</span></strong>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </form>
+    </div>
 </div>
