--- a/src/app/shared/components/studio-enregistrement/studio-enregistrement.component.html
+++ b/src/app/shared/components/studio-enregistrement/studio-enregistrement.component.html
@@ -5,6 +5,11 @@
                 <div class="col-lg-10 col-md-10">
                     <h4>Carateristiques du Studio</h4>
                     <div class="row mt-20">
+                        <div class="col-lg-12">
+                            <div class="form-group mb-30">
+                                <input formControlName="titre" class="form-control" type="text" placeholder="Titre">
+                            </div>
+                        </div>
                         <div class="col-lg-3">
                             <div class="form-group mb-30">
                                 <select class="form-control" formControlName="type">
@@ -122,7 +127,14 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group mt-10">
-                                <button class="btn btn-default btn-brand icon-tick" type="submit" [disabled]="!form.valid">Publier</button>
+                                <button *ngIf="isPosted" class="btn btn-default btn-brand icon-tick" type="button"
+                                    [disabled]="isPosted">
+                                    <span class="spinner-border spinner-border-sm" role="status"
+                                        aria-hidden="true"></span>
+                                    Patientez...
+                                </button>
+                                <button *ngIf="!isPosted" class="btn btn-default btn-brand icon-tick"
+                                    [disabled]="!form.valid">Publier</button>
                             </div>
                         </div>
                     </div>
