--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -52,21 +52,7 @@
         <div class="header-nav">
           <nav class="nav-main-menu">
             <ul class="main-menu">
-              <li class="has-children"><a class="active" href="index.html">Accueil</a>
-              </li>
-              <li class="has-children"><a href="jobs-grid.html">Find a Job</a>
-                <ul class="sub-menu">
-                  <li><a href="jobs-grid.html">Jobs Grid</a></li>
-                  <li><a href="jobs-list.html">Jobs List</a></li>
-                  <li><a href="job-details.html">Jobs Details  </a></li>
-                  <li><a href="job-details-2.html">Jobs Details 2              </a></li>
-                </ul>
-              </li>
-              <li class="has-children"><a href="companies-grid.html">Recruiters</a>
-                <ul class="sub-menu">
-                  <li><a href="companies-grid.html">Recruiters</a></li>
-                  <li><a href="company-details.html">Company Details</a></li>
-                </ul>
+              <li class="has-children"><a class="active" routerLink="/">Accueil</a>
               </li>
               <li class="has-children"><a href="candidates-grid.html">Candidates</a>
                 <ul class="sub-menu">
