--- a/src/app/create-post/create-post.component.css
+++ b/src/app/create-post/create-post.component.css
@@ -15,9 +15,9 @@
     padding: 30px;
 }
 
-.bg-postjob {
+/* .bg-postjob {
     background: url(../../assets/imgs/page/candidates/bg.svg) no-repeat right 20px bottom;
-}
+} */
 
 .icon-edu {
     background: url(../../assets/imgs/page/candidates/edu.svg) no-repeat left center;
