--- a/src/app/shared/components/salle/salle.component.html
+++ b/src/app/shared/components/salle/salle.component.html
@@ -1,12 +1,18 @@
 <div class="row">
     <div class="col-lg-9">
         <form [formGroup]="form" (submit)="saveData()">
-            <div class="col-lg-9 col-md-9">
+            <div class="col-lg-11 col-md-11">
                 <h4>Carateristiques de la salle</h4>
                 <div class="row mt-20">
                     <div class="col-lg-12">
                         <div class="form-group mb-30">
-                            <input class="form-control" type="text" placeholder="Titre..." formControlName="titre" />
+                            <input class="form-control" type="text" placeholder="Titre" formControlName="titre" />
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="form-group mb-30">
+                            <textarea class="form-control" type="text" placeholder="Decrivez l'annonce"
+                                formControlName="description"></textarea>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -53,15 +59,21 @@
                                 formControlName="projection" />
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
                         <div class="form-group mb-30">
                             <input class="form-control" type="text" placeholder="Mobilier" formControlName="mobilier" />
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
                         <div class="form-group mb-30">
                             <input class="form-control" type="text" placeholder="Acces a la Salle"
                                 formControlName="accesSalle" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Prix (FCFA)"
+                                formControlName="prix" />
                         </div>
                     </div>
                 </div>
