--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,12 +9,12 @@
                     </div>
                     <form class="login-register text-start mt-20" [formGroup]="loginForm" (ngSubmit)="login()">
                         <div class="form-group">
-                            <label class="form-label" for="input-1">Nom d'utilisateur *</label>
-                            <input class="form-control" id="input-1" type="text" formControlName="username" [(ngModel)]="user.username">
+                            <label class="form-label">Nom d'utilisateur *</label>
+                            <input class="form-control" type="text" formControlName="username">
                         </div>
                         <div class="form-group">
-                            <label class="form-label" for="input-4">Mot de passe*</label>
-                            <input class="form-control" id="input-4" type="password" formControlName="password" [(ngModel)]="user.password">
+                            <label class="form-label">Mot de passe*</label>
+                            <input class="form-control" type="password" formControlName="password">
                         </div>
                         <div class="login_footer form-group d-flex justify-content-between">
                             <label class="cb-container">
@@ -22,7 +22,8 @@
                         </div>
                         <p class="text text-danger">{{logErrorMessage}}</p>
                         <div class="form-group">
-                            <button class="btn btn-brand-1 hover-up w-100" type="submit">Se
+                            <button [disabled]="!loginForm.valid" class="btn btn-brand-1 hover-up w-100"
+                                type="submit">Se
                                 connecter</button>
                         </div>
                         <div class="text-muted text-center">Vous n'avez pas de compte ?<a routerLink="/register">
