--- a/src/app/shared/components/materiel/materiel.component.html
+++ b/src/app/shared/components/materiel/materiel.component.html
@@ -3,31 +3,39 @@
         <div class="col-lg-10">
             <h4>Details Matériel (s)</h4>
             <div class="row mt-10">
-                <div class="col-lg-9">
+                <div class="col-lg-10">
                     <div class="form-group mb-30">
                         <label class="font-sm color-text-mutted mb-10">Titre
                             *</label>
-                            <input type="text" class="form-control" formControlName="titre">
+                        <input type="text" class="form-control" formControlName="titre">
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-10">
                     <div class="form-group mb-30">
-                        <label class="font-sm color-text-mutted mb-10">Instrument (s)
+                        <label class="font-sm color-text-mutted mb-10">Description
                             *</label>
-                        <select class="form-control tools" multiple>
+                        <textarea class="form-control" placeholder="Descrivez l'annonce en quelques lignes "
+                            formControlName="description"></textarea>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Instrument
+                            *</label>
+                        <select class="form-control tools">
                         </select>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="form-group mb-30">
-                        <label class="font-sm color-text-mutted mb-10">Prix
+                        <label class="font-sm color-text-mutted mb-10">Prix (FCFA)
                             *</label>
                         <input type="text" class="form-control" formControlName="prix">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="form-group mb-30">
-                        <label class="font-sm color-text-mutted mb-10">Type
+                        <label class="font-sm color-text-mutted mb-10">Location / Vente
                             *</label>
                         <select class="form-control" formControlName="type">
                             <option value="Location">Location</option>
@@ -35,11 +43,46 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-3">
                     <div class="form-group mb-30">
-                        <label class="font-sm color-text-mutted mb-10">Description
+                        <label class="font-sm color-text-mutted mb-10">Marque
                             *</label>
-                        <input type="text" class="form-control" formControlName="description">
+                        <input type="text" class="form-control" formControlName="marque">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Model
+                            *</label>
+                        <input type="text" class="form-control" formControlName="model">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Couleur
+                            *</label>
+                        <input type="text" class="form-control" formControlName="couleur">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Poids (kg)
+                            *</label>
+                        <input type="text" class="form-control" formControlName="poids">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Matériau
+                            *</label>
+                        <input type="text" class="form-control" formControlName="materiau">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="form-group mb-30">
+                        <label class="font-sm color-text-mutted mb-10">Dimensions (L x l x H)
+                            *</label>
+                        <input type="text" class="form-control" formControlName="dimesions">
                     </div>
                 </div>
 
