--- a/src/app/shared/components/salle-repetition/salle-repetition.component.html
+++ b/src/app/shared/components/salle-repetition/salle-repetition.component.html
@@ -1,13 +1,18 @@
 <div class="row">
     <div class="col-lg-9">
         <form [formGroup]="form" (submit)="saveData()">
-            <div class="col-lg-8 col-md-8">
+            <div class="col-lg-11 col-md-11">
                 <h4>Caratéristiques de la Salle</h4>
                 <div class="row mt-10">
-                    <div class="col-lg-12">
+                    <div class="col-lg-8">
                         <div class="form-group mb-30">
-                            <input class="form-control" type="text"
-                                placeholder="Titre ..." formControlName="titre" />
+                            <input class="form-control" type="text" placeholder="Titre ..." formControlName="titre" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group mb-30">
+                            <input class="form-control" type="text" placeholder="Prix (FCFA) *"
+                                formControlName="prix" />
                         </div>
                     </div>
                     <div class="col-lg-12">
@@ -98,7 +103,7 @@
         <div class="sidebar-border">
             <div class="sidebar-heading">
                 <div class="avatar-sidebar">
-                    <div class="sidebar-info pl-0"><span class="sidebar-company">Divers</span>
+                    <div class="sidebar-info pl-0"><span class="sidebar-company">Autre (s) Matériel (s)</span>
                     </div>
                 </div>
             </div>
