--- a/src/app/shared/components/studio-enregistrement/studio-enregistrement.component.html
+++ b/src/app/shared/components/studio-enregistrement/studio-enregistrement.component.html
@@ -5,9 +5,19 @@
                 <div class="col-lg-10 col-md-10">
                     <h4>Carateristiques du Studio</h4>
                     <div class="row mt-20">
-                        <div class="col-lg-12">
+                        <div class="col-lg-8">
                             <div class="form-group mb-30">
                                 <input formControlName="titre" class="form-control" type="text" placeholder="Titre">
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group mb-30">
+                                <input formControlName="prix" class="form-control" type="text" placeholder="prix (FCFA)">
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="form-group mb-30">
+                                <textarea formControlName="description" class="form-control" placeholder="Description"></textarea>
                             </div>
                         </div>
                         <div class="col-lg-3">
