--- a/src/app/components/pro/pro.component.html
+++ b/src/app/components/pro/pro.component.html
@@ -27,7 +27,7 @@
         <hr>
         <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
     </div> -->
-    <h4 class="mt-0 mb-15 color-brand-1">Pour les Professionnels de Musique & Amateurs</h4>
+    <h4 class="mt-0 mb-15 color-brand-1">Professionnel de Musique & Amateur</h4>
     <form [formGroup]="profilFrom" (ngSubmit)="save()">
         <div class="row form-contact">
             <div class="col-lg-6 col-md-12">
